Edit profile Feature added

--- a/src/index.css
+++ b/src/index.css
@@ -1049,7 +1049,7 @@ h2 {
 
 /* src/component/user/EditProfilePage.css */
 
-.edit-profile-page {
+/* .edit-profile-page {
   max-width: 800px;
   margin: 20px auto auto;
   padding: 20px;
@@ -1098,7 +1098,7 @@ h2 {
 
 
 
-
+ */
 
 
 
