--- a/src/index.css
+++ b/src/index.css
@@ -1049,57 +1049,7 @@ h2 {
 
 /* src/component/user/EditProfilePage.css */
 
-/* .edit-profile-page {
-  max-width: 800px;
-  margin: 20px auto auto;
-  padding: 20px;
-  font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.edit-profile-page h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #007F86;
-}
-
-.profile-details {
-  margin-bottom: 20px;
-}
-
-.profile-details p {
-  margin: 5px 0;
-}
-
-.delete-profile-button {
-  background-color: #ff4b4b;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  display: block;
-  margin: 20px auto;
-}
-
-.delete-profile-button:hover {
-  background-color: #e60000;
-}
-
-.error-message {
-  color: red;
-  text-align: center;
-}
-
-
-
-
-
- */
-
+/*  
 
 
 /* Responsive styles */
